test/soft-contract/ill-typed/boolflip_e.caprice
(* TEST
  include refutable;
*)


let h x =
  assert x

let g _ y =
  assert y  

let rec f x y =
  if x
  then f y y (* ERROR: this is f false false => g false false => assert false *)
  else g x y

let main =
  if 0 < 1
  then f (0 < 1) (1 < 0)
  else h (1 < 0)
